<resources>
    <string name="app_name">TrickyQuiz</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="Question1Str">Press the Blue Button...</string>
    <string name="Q1StrChoice1">RED</string>
    <string name="Q1StrChoice2">YELLOW</string>
    <string name="Q1StrChoice3">GREEN</string>
    <string name="Q1StrChoice4">BLUE</string>

    <string name="Question2Str">What is the Airspeed Velocity of an Unladen Swallow?</string>
    <string name="OptA2Str">Umm...</string>
    <string name="OptB2Str">10 m/s</string>
    <string name="OptC2Str">2 m/s</string>
    <string name="OptD2Str">3000 m/s</string>

    <!-- Actual App Name on launcher -->
    <string name="title_activity_main_menu">Tricky Quiz</string>

    <string name="title_activity_question1">Question 1</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_end_game">EndGameActivity</string>
    <string name="RestartBtnStr">Restart</string>
    <string name="MainMenuBtnStr">Options</string>
    <string name="OptionsBtnStr">Main Menu</string>
    <string name="title_activity_leaderboard_activiy">LeaderboardActiviy</string>
    <string name="title_activity_options">OptionsActivity</string>
    <string name="title_activity_question2fave_color">Question2faveColor</string>
    <string name="title_activity_question6">Question6</string>
    <string name="stopped">Stopped</string>
    <string name="title_activity_question10">Question10</string>
    <string name="title_activity_question3">Question3</string>
    <string name="title_activity_question7">Question7</string>
    <string name="title_activity_question4">Question10</string>
    <string name="SodaCanQuestion">Explode the Soda Can!</string>
    <string name="sodadesc">soda</string>
    <string name="title_activity_credits">CreditsActivity</string>
    <string name="creditsBy">This app has been created by:</string>
    <string name="AndreScredit">Andrew Scibek</string>
    <string name="BrentCcredit">Brent Clancy</string>
    <string name="DanielMcredit">Daniel Medina Sada</string>
    <string name="FeyiOcredit">Feyi Oyewole</string>
    <string name="JamesEcredit">James Ewings</string>
    <string name="CreditsTitle">Credits</string>
    <string name="LeaderboardTitle">Leaderboard</string>
    <string name="Q8Str">Get the ball to the corner</string>
    <string name="livesQ6">Medium Text</string>
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
=======
=======
>>>>>>> master
    <string name="title_activity_question13">Question13</string>
    <string name="openSafeStr">Open</string>
    <string name="safeboxdesc">SafeBox</string>
    <string name="GTNQstr">GoToNextQuestion</string>
    <string name="q11_timer">00:00</string>

<<<<<<< HEAD
>>>>>>> origin/Daniel
=======
>>>>>>> master
    <string name="title_activity_question11">Question11</string>
    <string name="title_activity_sound">SoundActivity</string>
    <string name="timerText">\n00:30</string>
    <string name="livesTxtq6">5</string>
    <string name="q7title">Look in the drawer</string>
    <string name="sound2_music">Music:</string>
    <string name="sound2_soundeffects">Sound Effects:</string>
    <string name="sound2_title">Sound Options</string>
<<<<<<< HEAD
<<<<<<< HEAD
=======
    <string name="title_activity_question13">Question13</string>
    <string name="openSafeStr">Open</string>
    <string name="safeboxdesc">SafeBox</string>
    <string name="GTNQstr">GoToNextQuestion</string>
>>>>>>> origin/Daniel
=======
    <string name="nextqbtn6str">nextq6str</string>
    <string name="drawerrstr">drawerrstr</string>
>>>>>>> origin/Daniel
=======
>>>>>>> master
</resources>
