<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="team5.trickygame.CreditsActivity"
    android:background="@mipmap/background">

<<<<<<< Updated upstream
    <TextView android:text="@string/CreditsTitle" android:layout_width="wrap_content"
=======
    <TextView android:text="Credits" android:layout_width="wrap_content"
>>>>>>> Stashed changes
        android:layout_height="wrap_content"
        android:id="@+id/creditTitle"
        android:textColor="@android:color/black"
        android:textSize="40sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/creditsBy"
        android:id="@+id/textView2"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:layout_below="@+id/creditTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView3"
        android:text="@string/AndreScredit"
        android:textColor="@android:color/black"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/BrentCcredit"
        android:id="@+id/textView4"
        android:textColor="@android:color/black"
        android:layout_below="@+id/textView3"
        android:layout_alignEnd="@+id/textView6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/DanielMcredit"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:textColor="@android:color/black"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/FeyiOcredit"
        android:id="@+id/textView6"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:textColor="@android:color/black"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/JamesEcredit"
        android:id="@+id/textView7"
        android:layout_below="@+id/textView6"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:textColor="@android:color/black"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
