<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="team5.trickygame.EndGameActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RestartBtnStr"
        android:id="@+id/RestartBtn"
        android:minHeight="70dp"
        android:minWidth="250dp"
        android:textSize="30sp"
        android:maxHeight="70dp"
        android:clickable="true"
        android:onClick="restartGame"
        android:layout_above="@+id/MainMenuBtn"
        android:layout_alignLeft="@+id/MainMenuBtn"
        android:layout_alignStart="@+id/MainMenuBtn" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MainMenuBtnStr"
        android:id="@+id/OptionsBtn"
        android:minHeight="70dp"
        android:textSize="30sp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/MainMenuBtn"
        android:layout_alignStart="@+id/MainMenuBtn"
        android:layout_alignRight="@+id/MainMenuBtn"
        android:layout_alignEnd="@+id/MainMenuBtn"
        android:onClick="goToOptions"
        android:clickable="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/OptionsBtnStr"
        android:id="@+id/MainMenuBtn"
        android:minWidth="250dp"
        android:minHeight="70dp"
        android:textSize="30sp"
        android:maxHeight="70dp"
        android:onClick="goToMainMenu"
        android:clickable="true"
        android:layout_above="@+id/OptionsBtn"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/endGameStat"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="40sp" />

</RelativeLayout>
